syntax = "proto3";

package galvanalyser;

message DataRange {
  int64 start_sample_no = 1;
  repeated double values = 2;
}

message DataRanges{
  int64 dataset_id = 1;
  int64 column_id = 2;
  repeated DataRange ranges = 3;
}